Change target to same page in Our Tree Collection link

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         
         <div class="grid_4">
           <div class="gallery">
-            <a target="_blank" href="./our_tree_collection_1.html">
+            <a target="" href="./our_tree_collection_1.html">
               <img src="./images/tree_collection_2.jpg" alt="Our Tree Collection">
             </a>
             <div class="desc">The Tree Collection</div>
