Changed multiple links to same page target

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <a target="" href="./our_tree_collection_1.html">
               <img src="./images/tree_collection_2.jpg" alt="Our Tree Collection">
             </a>
-            <div class="desc">The Tree Collection</div>
+            <div class="desc">Our Tree Collection</div>
           </div>
         </div>
         
