Additional tree photos, directory structure changes

--- a/our_tree_collection_1.html
+++ b/our_tree_collection_1.html
@@ -106,7 +106,7 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/tree_collection_2.jpg" alt="">
+              <img src="./images/cappadocian_maple_1.jpg" alt="">
             </a>
             <div class="common_tree_name">Cappadocian Maple</div>
             <div class="latin_tree_name">Acer cappadocicum</div>
@@ -210,7 +210,7 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/tree_collection_2.jpg" alt="">
+              <img src="./images/common_alder_1.jpg" alt="">
             </a>
             <div class="common_tree_name">Common Alder</div>
             <div class="latin_tree_name">Alnus glutinosa</div>
@@ -299,7 +299,7 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/tree_collection_2.jpg" alt="">
+              <img src="./images/european_hornbeam_1.jpg" alt="">
             </a>
             <div class="common_tree_name">European Hornbeam</div>
             <div class="latin_tree_name">Carpinus betulus</div>
