--- a/our_tree_collection_4.html
+++ b/our_tree_collection_4.html
@@ -111,7 +111,7 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/tree_collection_2.jpg" alt="">
+              <img src="./images/plymouth_pear_1.jpg" alt="">
             </a>
             <div class="common_tree_name">Plymouth Pear</div>
             <div class="latin_tree_name">Pyrus cordata</div>
