--- a/our_tree_collection_1.html
+++ b/our_tree_collection_1.html
@@ -66,7 +66,7 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/aspen_1.jpg" alt="">
+              <img src="./images/aspen_2.jpg" alt="aspen_1.jpg">
             </a>
             <div class="common_tree_name">Aspen</div>
             <div class="latin_tree_name">Populus tremula</div>
@@ -76,12 +76,14 @@
         <div class="grid_8">
           <div class="tree_card_summary">
               <p>
-                The small leaves of aspen are borne singly on long flattened stalks and flutter in the slightest breeze.
-                They are smooth, on both sides, the underside being paler, and turn amber-yellow in autumn. In the wild,
-                apens can quickly colonise new ground and rarely grow singly. They send up suckers from their roots which
-                often form dense thickets. The silvery-green bark becomes furrowed as the tree ages. The grey poplar is 
-                more tolerant of shade than other poplars and grows in damper soils, reaching 75ft(23m) , with massive 
-                spreading branches. Aspen leaves have wide teeth and the bark is diamond patterned.
+                The small leaves of aspen are borne singly on long flattened stalks and flutter in the slightest breeze
+                making a distinctive rustling sound. The leaves are smooth on both sides, the underside being a paler colour.
+                In autumn they turn an amber-yellow.
+              </p>
+              <p>
+                In the wild, aspens can quickly colonise new ground and rarely grow singly. They send up suckers from their roots which
+                often form dense thickets. The silvery-green bark becomes furrowed as the tree ages. 
+                Aspen leaves have wide teeth and the bark is diamond patterned.
               </p>
           </div>
         </div>
