Upload more content

--- a/our_tree_collection_1.html
+++ b/our_tree_collection_1.html
@@ -66,7 +66,7 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/aspen_caption.jpg" alt="aspen_caption.jpg">
+              <img src="./images/trees/winter/aspen_1.jpg" alt="./images/trees/winter/aspen_caption.jpg">
             </a>
 <!--            <div class="common_tree_name">Aspen</div>
             <div class="latin_tree_name">Populus tremula</div>-->
@@ -116,7 +116,7 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/scots_pine_2.jpg" alt="">
+              <img src="./images/trees/winter/scots_pine_1.jpg" alt="./images/trees/winter/scots_pine_1.jpg">
             </a>
 <!--            <div class="common_tree_name">Scots Pine</div>
             <div class="latin_tree_name">Pinus sylvestris</div>-->
@@ -331,10 +331,10 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/sweet_cherry_1.jpg" alt="sweet_cherry_1.jpg">
+              <img src="./images/trees/winter/sweet_cherry_1.jpg" alt="./images/trees/winter/sweet_cherry_1.jpg">
             </a>
-            <div class="common_tree_name">Sweet Cherry</div>
-            <div class="latin_tree_name">Prunus avium</div>
+<!--            <div class="common_tree_name">Sweet Cherry</div>
+            <div class="latin_tree_name">Prunus avium</div>-->
           </div>
         </div>
         
@@ -355,10 +355,10 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/tibetan_cherry_1.jpg" alt="tibetan_cherry_1.jpg">
+              <img src="./images/trees/winter/tibetan_cherry_1.jpg" alt="./images/trees/winter/tibetan_cherry_1.jpg">
             </a>
-            <div class="common_tree_name">Tibetan Cherry</div>
-            <div class="latin_tree_name">Prunus serrula</div>
+<!--            <div class="common_tree_name">Tibetan Cherry</div>
+            <div class="latin_tree_name">Prunus serrula</div>-->
           </div>
         </div>
         
