--- a/our_tree_collection_2.html
+++ b/our_tree_collection_2.html
@@ -68,10 +68,10 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/tree_collection_2.jpg" alt="">
+              <img src="./images/trees/winter/plumleaf_hawthorn_1.jpg" alt="./images/trees/winter/plumleaf_hawthorn_1.jpg">
             </a>
-            <div class="common_tree_name">Plumleaf Hawthorn</div>
-            <div class="latin_tree_name">Crataegus Persimilis 'Prunifolia'</div>
+<!--            <div class="common_tree_name">Plumleaf Hawthorn</div>
+            <div class="latin_tree_name">Crataegus Persimilis 'Prunifolia'</div>-->
           </div>
         </div>
         
