--- a/our_tree_collection_6.html
+++ b/our_tree_collection_6.html
@@ -248,10 +248,10 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/tree_collection_2.jpg" alt="">
+              <img src="./images/trees/winter/horse_chestnut_1.jpg" alt="./images/trees/winter/horse_chestnut_1.jpg">
             </a>
-            <div class="common_tree_name">Horse Chestnut</div>
-            <div class="latin_tree_name">Aesculus hippocastanum</div>
+<!--            <div class="common_tree_name">Horse Chestnut</div>
+            <div class="latin_tree_name">Aesculus hippocastanum</div>-->
           </div>
         </div>
         
