Upload more content

--- a/our_tree_collection_3.html
+++ b/our_tree_collection_3.html
@@ -134,10 +134,8 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/tree_collection_2.jpg" alt="">
+              <img src="./images/trees/winter/martins_custard_1.jpg" alt="./images/trees/winter/martins_custard_1.jpg">
             </a>
-            <div class="common_tree_name">Apple 'Martin's Custard'</div>
-            <div class="latin_tree_name">Malus pumila 'Martin's pumila'</div>
           </div>
         </div>
         
