--- a/our_tree_collection_4.html
+++ b/our_tree_collection_4.html
@@ -288,17 +288,15 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/tree_collection_2.jpg" alt="">
+              <img src="./images/trees/winter/golden_weeping_willow_1.jpg" alt="./images/trees/winter/golden_weeping_willow_1.jpg">
             </a>
-            <div class="common_tree_name">Golden Weeping Willow</div>
-            <div class="latin_tree_name">Salix x chrysocoma</div>
           </div>
         </div>
         
         <div class="grid_8">
           <div class="tree_card_summary">
               <p>
-                [ Summary Description goes here ]
+                  A weeping, deciduous tree, to 15m tall and wide, with vigorous arching branches terminating in golden-yellow branchlets. Young yellow-green, lanceolate leaves mature to a glossy green and catkins containing both male and female flowers, or occasionally all male or all female in separate catkins, appear with the leaves in spring              
               </p>
           </div>
         </div>
