--- a/our_tree_collection_5.html
+++ b/our_tree_collection_5.html
@@ -366,10 +366,8 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/tree_collection_2.jpg" alt="">
+              <img src="./images/trees/winter/small_leaved_lime_1.jpg" alt="./images/trees/winter/small_leaved_lime_1.jpg">
             </a>
-            <div class="common_tree_name">Small-leaved Lime</div>
-            <div class="latin_tree_name">Tilia cordata</div>
           </div>
         </div>
         
@@ -416,10 +414,8 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/tree_collection_2.jpg" alt="">
+              <img src="./images/trees/winter/common_lime_1.jpg" alt="./images/trees/winter/common_lime_1.jpg">
             </a>
-            <div class="common_tree_name">Common Lime</div>
-            <div class="latin_tree_name">Tilia cordata x platyphyllos</div>
           </div>
         </div>
         
