--- a/our_tree_collection_2.html
+++ b/our_tree_collection_2.html
@@ -108,10 +108,8 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/tree_collection_2.jpg" alt="">
+              <img src="./images/trees/winter/common_beech_1.jpg" alt="./images/trees/winter/common_beech_1.jpg">
             </a>
-            <div class="common_tree_name">Common Beech</div>
-            <div class="latin_tree_name">Fagus Sylvatica</div>
           </div>
         </div>
         
