Upload more content

--- a/our_tree_collection_6.html
+++ b/our_tree_collection_6.html
@@ -283,10 +283,8 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/tree_collection_2.jpg" alt="">
+              <img src="./images/trees/winter/sycamore_maple_1.jpg" alt="./images/trees/winter/sycamore_maple_1.jpg">
             </a>
-            <div class="common_tree_name">Sycamore Maple</div>
-            <div class="latin_tree_name">Acer pseudoplatanus</div>
           </div>
         </div>
         
