Upload more content

--- a/our_tree_collection_2.html
+++ b/our_tree_collection_2.html
@@ -231,7 +231,16 @@
         <div class="grid_8">
           <div class="tree_card_summary">
               <p>
-                [ Summary Description goes here ]
+                Only the female holly tree bears the bright red berries which are so much a part of our traditional Christmas decorations.
+              </p>
+              <p>
+                As one of Britain's few native evergreen trees, the holly's leaves and berries were almost certainly used as a winter decoration in pre-Christian times. Being thick, with a waxy surface, the leaves resist water loss and last up to four years on the tree.
+              </p>
+              <p>
+                The sharp spines found on the tree's lower leaves are designed to protect them from the attentions of browsing animals. The leaves growing higher up are spineless. The bark is green when young and becomes smooth and grey later.
+              </p>
+              <p>
+                The holly flowers appear in May. The leaves are alternate, dark and glossy on top, paler underneath. Cultivated varieties of holly have different leaf colours and shapes.
               </p>
           </div>
         </div>
