--- a/our_tree_collection_4.html
+++ b/our_tree_collection_4.html
@@ -106,7 +106,18 @@
         <div class="grid_8">
           <div class="tree_card_summary">
               <p>
-                [ Summary Description goes here ]
+                  The Plymouth pear is a deciduous shrub that can reach up to 8-10 metres in height. It has purplish twigs with pink-brown heartwood.
+                  Unusually the fruit does not have the shape of the classic pear, but rather they are small, almost round, hard and borne on long stalks.
+                  When first ripe they have a brown and woody appearance.
+              </p>
+              <p>
+                  The leaves can vary somewhat in shape from oval to rounded, and with a wedge-shaped, rounded or heart-shaped base to them. The flowers that appear in late April and early May can be pale cream to pink in colour. Flowers have an unplesant smell that has been variously described as decaying scampi or wet carpet. They mostly attract flies.
+              </p>
+              <p>
+                  Plymouth pear is one of Britain's rarest trees and is thought to live exclusively in wild hedgerows in the Plymouth and Truro areas. It is thought that it may once been a widespread species in mixed woodlands. While it can grow in shade, it prefers full sun and thrives best at the edge of woodlands and in hedgerows in moist soil.
+              </p>
+              <p>
+                  Globally, this species is restricted to Western Europe with populations in the UK, where it is native; France; north-west Spain and Portugal. Some believe they are an introduced species since populations in France live in ancient woodland, whereas the UK trees are located in suburban habitats. The tree can be Identified in winter by it's hairless twigs with alternate, oval, purple-brown buds.              
               </p>
           </div>
         </div>
@@ -193,7 +204,10 @@
         <div class="grid_8">
           <div class="tree_card_summary">
               <p>
-                [ Summary Description goes here ]
+                  Also called the English oak or sometimes the pedunculate oak. Pedunculate because it bears it fruit (acorns) on long stalks called 'peduncles'. In Britain it is the most common oak, notable for it's broad trunk, massive crooked branches and spreading crown.
+              </p>
+              <p>
+                  The leaves are alternate and stalkless, with ear-shaped lobes at the base and four or five lobes on each side of the leaf. The female flowers are borne on long upright stalks, whereas the male flowers present themselves as long hanging catkins.
               </p>
           </div>
         </div>
@@ -232,7 +246,10 @@
         <div class="grid_8">
           <div class="tree_card_summary">
               <p>
-                [ Summary Description goes here ]
+                  In autumn, the hanging brown leaves, rough grey bark and shiny black berries of the purging buckthorn add striking colours to the woodland scene. The thorny shoots are of two kinds; long shoots which extend growth, and short shoots which bear bunches of leaves, flowers and fruit. The short ones, with the inconspicuous green flowers, resemble a roebuck's antlers in shape. 
+              </p>
+              <p>
+                  The leaves are oval, finely toothed and set in opposite pairs, as are the spurs and branches. The veins in the leaf characteristically point upwards towards the tip of the leaf, rather than running in the usual parallel direction.
               </p>
           </div>
         </div>
@@ -296,7 +313,13 @@
         <div class="grid_8">
           <div class="tree_card_summary">
               <p>
+                  This graceful tree is the commonest of a number of cultivated weeping willows, and is widely planted in parks and gardens.
+              </p>
+              <p>
                   A weeping, deciduous tree, to 15m tall and wide, with vigorous arching branches terminating in golden-yellow branchlets. Young yellow-green, lanceolate leaves mature to a glossy green and catkins containing both male and female flowers, or occasionally all male or all female in separate catkins, appear with the leaves in spring              
+              </p>
+              <p>
+                  It thrives in either damp or dry soils and grows quickly. From it's early days it produces a distinctive round cascade of yellow twigs and green leaves, reaching almost to the ground. The catkins, which open in April, are predominantly male; sometimes flowers of both sexes grow on the same catkin. The greyish-brown bark is criss-crossed by shallow ridges.
               </p>
           </div>
         </div>
@@ -319,7 +342,10 @@
         <div class="grid_8">
           <div class="tree_card_summary">
               <p>
-                [ Summary Description goes here ]
+                Frequently seen alongside rivers and streams are crack willows that have been pollarded to induce dense new growth to provide poles for hurdles. This native willow's name refers to the brittleness of it's twigs, which snap off easily.
+              </p>
+              <p>
+                The bark is grey, deeply ridged and cracked. The trees fragility actually help with propogation; broken twigs, carried away by water, often take root.
               </p>
           </div>
         </div>
