--- a/our_tree_collection_6.html
+++ b/our_tree_collection_6.html
@@ -372,7 +372,13 @@
         <div class="grid_8">
           <div class="tree_card_summary">
               <p>
-                [ Summary Description goes here ]
+                  Unlike the common hawthorn, the Midland species - also called English hawthorn - is usually found as a woodland tree rather than being in hedge form. White flowers open in May, and later there are fruits which are more round and redder than those of the common hawthorn.
+              </p>
+              <p>
+                  Midland hawthorn is probably better known for it's cultivated garden variants, many of which are hybrids with the common hawthorn. Their flowers may be single or double, and coloured white, pink or red.
+              </p>
+              <p>
+                  The leaves are alternate with the lobes being shallower and more rounded than those on the common hawthorn. The fruit contains two or three seeds, as opposed to the single-seeded common hawthorn fruit. 
               </p>
           </div>
         </div>
@@ -390,7 +396,13 @@
         <div class="grid_8">
           <div class="tree_card_summary">
               <p>
-                [ Summary Description goes here ]
+                  Inconspicuous for most of the year, the spindle asserts itself in autumn with a fine show of dark red leaves and pinkish-red fruits. Simply on the strength of this display it is often cultivated in parks and gardens.
+              </p>
+              <p>
+                  The colour of the fruit attracts birds, which help to spread the seed. The wood of the tree was used in centuries past to make the wooden spindles used in the wool spinning industry, hence the name.
+              </p>
+              <p> 
+                  The greenish-yellow flowers open in May. The leaves are opposing and thin and pointed, with small teeth. The leaves turn red and the fruit 'capsules' pinkish-red in the autumn. The fruit 'capsules' have a matt texture and 4 lobes.
               </p>
           </div>
         </div>
@@ -431,7 +443,13 @@
         <div class="grid_8">
           <div class="tree_card_summary">
               <p>
-                [ Summary Description goes here ]
+                  For centuries the fast-growing and sturdy hawthorn has traditionally divided fields across mile upon mile of the British countryside. It will grow almost anywhere, and a well made and healthy hedge is virtually impenetrable.
+              </p>
+              <p>
+                  The white flowers, with their sickly sweet scent, are borne in May - which gives the hawthorn it's other familiar name - Maythorn. The flowers grow in clusters on hawthorn trees, but seldom appear on the close-clipped hedgerows.
+              </p>
+              <p>
+                  The greyish-brown bark has many small scales. The leaves are alternate with five to seven lobes. The haws (fruit) ripen to a dark red in September and each contains a single seed. There is a variety called 'biflora' which can flower in the winter during mild years.
               </p>
           </div>
         </div>
