--- a/the_volunteer_programme.html
+++ b/the_volunteer_programme.html
@@ -10,7 +10,7 @@
     <div class="container_12 clearfix">
     
         <div class="grid_4">
-            <a target="_blank" href="./index.html">
+            <a target="" href="./index.html">
               <h3>THE ATTENBOROUGH ARBORETUM<h3>
             </a>
         
