Upload more content

--- a/our_tree_collection_3.html
+++ b/our_tree_collection_3.html
@@ -198,10 +198,10 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/tree_collection_2.jpg" alt="">
+              <img src="./images/trees/winter/london_plane_1.jpg" alt="./images/trees/winter/london_plane_1.jpg">
             </a>
-            <div class="common_tree_name">London Plane</div>
-            <div class="latin_tree_name">Platanus occidentalis x orientalis</div>
+<!--            <div class="common_tree_name">London Plane</div>
+            <div class="latin_tree_name">Platanus occidentalis x orientalis</div>-->
           </div>
         </div>
         
