--- a/photo_gallery_1.html
+++ b/photo_gallery_1.html
@@ -152,15 +152,15 @@
           </div>
         </div>
         
-<!--        <div class="grid_4">
+        <div class="grid_4">
           <div class="tree_card">
             <a target="" href="">
-              <img src="./images/photo-gallery/poss_muntjac_prints.jpg" alt="./images/photo-gallery/poss_muntjac_prints.jpg">
+              <img src="./images/photo-gallery/weeping_willow_1.jpg" alt="./images/photo-gallery/weeping_willow_1.jpg">
             </a>
-            <div class="common_tree_name">Possibly Muntjac Deer</div>
+            <div class="common_tree_name">Golden Weeping Willow</div>
             <div class="latin_tree_name">March 2023</div>
           </div>
-        </div>-->
+        </div>
         
 <!--        <div class="grid_4">
           <div class="tree_card">
