Upload again more content

--- a/visitor_information.html
+++ b/visitor_information.html
@@ -131,10 +131,9 @@
             Some explanation is needed for what we mean when we say that a tree is native. The terms 'native' and 'alien' have attracted a certain amount of debate and discussion, especially when applied to the movement of people. In a botanical context in the British Isles, the position is as follows:
           </p>
           <p>
-            A native species is one that is deemed have</br></br>
-            evolved entirely in these islands, or</br></br>
-            arrived here by any means before the Neolithic period, or</br></br>
-            arrrived here since the Neothilic by a method independent of human activity.</br></br>
+            A native species is one that is deemed have evolved entirely in these islands, <b>or</b>
+            arrived here by any means before the Neolithic period, <b>or</b>
+            arrrived here since the Neothilic by a method independent of human activity.
           </p>
           <p>
             The Neolithic is defined as havng begun about 5,000 years ago.
