--- a/volunteering_works/2023-03-23.html
+++ b/volunteering_works/2023-03-23.html
@@ -124,7 +124,7 @@
                 A few weeks ago the volunteers cleared a large area of bramble under the Golden Weeping Willow located near the top of the arboretum.
               </p>
               <p>
-                Once this has been completed we were left with a lovely large cleared area. The question was now 'How to make use of it'? 
+                Once this had been completed we were left with a lovely large cleared area. The question was now 'How to make use of it'? 
               </p>
               <p>
                 With the ready pile of cut logs around the willow tree a seating area seemed obvious. But since the ground here is quite damp and suits willow trees nicely an additional idea occurred.
