Upload again more content

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         
         <div class="grid_4">
           <div class="tree_card">
-            <a target="" href="under_development.html">
+            <a target="" href="visitor_centre.html">
               <img src="./images/visitor_centre_1.jpg" alt="The Visitor Centre">
             </a>
             <div class="desc">The Visitor Centre</div>
