--- a/volunteering_works/2023-03-30.html
+++ b/volunteering_works/2023-03-30.html
@@ -56,6 +56,7 @@
         </div>
         
         <div class="grid_12">
+          &nbsp;
         </div>
         
         <!-- Volunteer Works-->
