Upload again more content

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="grid_4">
           <div class="tree_card">
             <a target="" href="photo_gallery_1.html">
-              <img src="./images/photo-gallery/common_hazel_catkins.jpg" alt="The Gallery">
+              <img src="./images/photo-gallery/photo_gallery.jpg" alt="The Gallery">
             </a>
             <div class="desc">Our Photo Gallery</div>
           </div>
@@ -133,7 +133,7 @@
         
         <div class="grid_4">
           <div class="tree_card">
-            <a target="" href="./volunteering_works/2023-04-04.html">
+            <a target="" href="./volunteering_works/2023-04-13.html">
               <img src="./volunteering_works/images/20230323_2.jpg" alt="./volunteering_works/images/20230323_2.jpg">
             </a>
             <div class="desc">The Volunteering Blog</div>
@@ -187,7 +187,7 @@
             <a target="" href="./adopt_a_tree_1.html">
               <img src="./images/adopt_a_tree.jpg" alt="./images/adopt_a_tree.jpg">
             </a>
-            <div class="desc">Adopt A Tree programme</div>
+            <div class="desc">Adopt a Tree Programme</div>
           </div>
         </div>
         
