Upload again more content

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
         
         <div class="grid_4">
-          <a target="" href="under_development.html">
+          <a target="" href="the_story_telling_circle.html">
             <img src="./images/story_telling_circle_1.jpg" alt="The Story Telling Circle">
           </a>
           <div class="desc">The Story Telling Circle</div>
